--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "gulp-uglify": "^1.0.2",
     "less-plugin-autoprefix": "^1.1.0",
     "less-plugin-clean-css": "^1.4.0",
-    "vinyl-transform": "^1.0.0"
+    "q": "^1.1.2",
+    "vinyl-transform": "^1.0.0",
+    "yargs": "^1.3.3"
   }
 }
